created filters, index, signin. Set fonts and icons

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "event-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./constants/icons/deadpool.png",
+    "icon": "./assets/icons/deadpool.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,26 +13,27 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/icons/deadpool.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/icons/deadpool.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./constants/icons/deadpool.png",
+          "image": "./assets/icons/deadpool.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
