--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_ATLAS_URI = "mongodb+srv://arujjwal0208:00000000@cluster0.s6fat.mongodb.net/
                 ?retryWrites=true&w=majority&appName=Cluster0"
+GOOGLE_AUTH_CLIENT_ID = "153720121170-9pjgbou219a5aoct6s3sjv019lv34sre.apps.googleusercontent.com"
 
                 
