--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
-    "dev": "nodemon server.ts"
+    "start": "nodemon -x ts-node server.ts",
+    "dev": "nodemon --exec ts-node server.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,20 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
+    "@types/express": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
-    "graphql": "^16.10.0",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.7",
+    "nodemon": "^3.1.9"
   }
 }
