--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,12 +4,11 @@
       "module": "CommonJS",
       "moduleResolution": "node",
       "outDir": "./dist",
-      "rootDir": "./src",
+      "rootDir": ".",
       "esModuleInterop": true,
       "strict": true,
       "skipLibCheck": true
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": ["./**/*.ts"],
+    "exclude": ["./node_modules"]
   }
-  
