--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,29 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -x ts-node server.ts",
-    "dev": "nodemon --exec ts-node server.ts"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "description": "",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "typescript": "^4.9.5"
+  },
   "dependencies": {
     "@types/express": "^5.0.0",
-    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.7",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   }
 }
