--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/express": "^5.0.0",
     "@types/graphql": "^14.2.3",
     "@types/jest": "^29.5.12",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.10.7",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
