--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.0.5"
+    "expo-image-picker": "~16.0.5",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
