--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@types/express": "^5.0.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
